tests/baselines/reference/uncalledFunctionChecksInConditional.errors.txt
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(4,5): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(8,5): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(8,14): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
tests/cases/compiler/uncalledFunctionChecksInConditional.ts(12,5): error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?


==== tests/cases/compiler/uncalledFunctionChecksInConditional.ts (4 errors) ====
    declare function isFoo(): boolean;
    declare function isBar(): boolean;
    
    if (isFoo) {
        ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (isFoo || isBar) {
        ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
                 ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (isFoo || isFoo()) {
        ~~~~~
!!! error TS2774: This condition will always return true since the function is always defined. Did you mean to call it instead?
        // error
    }
    
    if (isFoo && isFoo()) {
        // no error
    }
    